H3CIPMSJAVA-20180830/src/objects/Product_Interests__c.object
<CustomObject>
    <description>To store the list of product in which lead is interested.
UL@Breakingpoint20151103</description>
    <fields>
        <fullName>HP_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>HP SFDC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>UL@ibreakingpoint 20151118</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Product Interest</relationshipLabel>
        <relationshipName>Product_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Interest</relationshipLabel>
        <relationshipName>Product_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>感兴趣产品</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Product Interests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>